--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <div id="main">
         <div id="bar">
-            <span>移牌：<cite id="step">0</cite></span>
-            <span>得分：<cite id="score">0</cite></span>
+
+            <span>步骤：<cite id="step">0</cite></span>
+            <span>时间：<cite id="score">0</cite></span>
+            <span class="record"><a>游戏记录</a></span>
             <input id="playBtn" type="button" value="开始" />
             <input id="undoBtn" type="button" value="后退" />
         </div>
